--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^5.1.6",
+    "@google/generative-ai": "^0.14.1",
     "@neondatabase/serverless": "^0.9.4",
+    "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "drizzle-orm": "^0.31.2",
     "lucide-react": "^0.399.0",
+    "moment": "^2.30.1",
     "next": "14.2.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
